Add swagger to download APIs
